@@ -14,6 +14,8 @@ Version 2.8
 - Fixed loop length calculation for some iterators.
 - Changed how Jinja2 enforces strings to be native strings in
   Python 2 to work when people break their default encoding.
+- Added :func:`make_logging_undefined` which returns an undefined
+  object that logs failures into a logger.
 
 Version 2.7.2
 -------------
